# WASIBrowser

./: .gitignore  README.md  go.mod  plan-blitz.md  plan-webnext.md  plan.md  web20-scorecard.md
bench/js/: bench.html  package.json  run.mjs
cmd/broker/: main.go
cmd/run/: app.wasm  main.go
cmd/serve/: main.go
docs/: 00-WEBNEXT-OVERVIEW.md  01-WEB-SECURITY.md  02-WEB-NAMING.md  04-WEB-RPC.md  05-WEB-INTERCONNECT.md  08-WEB-VALUE.md  ABI.md  BENCHMARKS.md  DEVX-LANGUAGES.md  DEVX-RESULTS.md  OPERATIONAL-LAYER.md  README.md  SDK.md  WEB-VALUE.md  WEB20-SCORECARD.md
engine/: engine.go  testdom.go  testdom_test.go
eventmsg/: eventmsg.go  eventmsg_test.go
examples/: TODO_SPEC.md
examples/bench-c/: bench.c
examples/click/: main.go
examples/counter/: main.go
examples/hello/: main.go
examples/retailer-go/: main.go
examples/rpc-smoke-c/: rpc.c
examples/search-rs/: Cargo.toml
examples/search-rs/src/: lib.rs
examples/shop-c/: shop.c
examples/starter-c/: starter.c
examples/task-dashboard-c/: business.c  business.h  dashboard.c
examples/todo-c/: todo.c
examples/todo-go/: main.go
examples/todo-rs/: Cargo.toml
examples/todo-rs/src/: lib.rs
host/: host.go  host_test.go
manifests/: retailer.local.json  search.local.json  shop.local.json
protocol/: decode.go  protocol.go  protocol_test.go
renderer/: Cargo.toml  bench-c.wasm  bench-test.txt  chrome-test.txt  click.wasm  dashboard-c.wasm  dashboard-test.txt  filter-test.txt  hello.wasm  hover-stress.txt  multisite-check.txt  navlinks-check.txt  redesign-test.txt  retailer-check.txt  rpc-smoke-test.txt  search-check.txt  shop-e2e.txt  shop-test.txt  starter-c.wasm  starter-test.txt  swr-test.txt  todo-c.wasm  todo-go.wasm
renderer/src/: abi.rs  guest.rs  logger.rs  main.rs  manifest.rs  script.rs  ui.rs
retailer-server/: auth.go  handlers.go  main.go  server_test.go  store.go
scripts/: build-c.cmd  dev.ps1
sdk-c/: gwb.h  gwbc-tw.h  gwbc.h  gwbjson.h
sdk-rust/: Cargo.toml
sdk-rust/src/: lib.rs
sdk/app/: app.go  app_native.go  app_test.go  app_wasip1.go
sdk/dom/: submit_native.go  submit_wasip1.go
sdk/gwb/: gwb.go  platform_other.go  platform_wasip1.go
search-server/: Cargo.toml
search-server/src/: main.rs
server/: auth.go  handlers.go  main.go  server_test.go  store.go
session/: session.go  session_test.go
tab/: fakehost.go  tab.go  tab_test.go
webkit/: README.md  bundle.cpp  dom_agent.cpp  form_values.cpp
webkitengine/: engine.go  ipc.go  transport.go  webkitengine_test.go
window/: manager.go  window.go  window_test.go
