[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
wasmtime = "46.0.1"
wasmtime-wasi = "46.0.1"

# Blitz engine — PATH DEPS on the local checkout (C:\src\blitz, branch
# gwb-perf off f550417) so we can carry performance patches.
# Was crates.io =0.3.0-alpha.6.
blitz-dom = { path = "C:/src/blitz/packages/blitz-dom" }
blitz-html = { path = "C:/src/blitz/packages/blitz-html" }
blitz-shell = { path = "C:/src/blitz/packages/blitz-shell" }
blitz-traits = { path = "C:/src/blitz/packages/blitz-traits" }
anyrender_vello = "0.12"
winit = "=0.31.0-beta.2"

# tokio::io::AsyncWrite is the trait wasmtime-wasi's stdout plumbing wants.
tokio = "1.42"
chrono = "0.4.45"
atomic_refcell = "0.1"
keyboard-types = "0.7"
