[package]
name = "search-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "search-server"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
rand = "0.8"
